# SDL_latex

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  premake5.lua
lib/: CMakeLists.txt
lib/include/SDL2/: SDL_latex.h  TEX_error.h  TEX_font.h  TEX_fontManager.h  TEX_hash.h  TEX_list.h  TEX_parser.h
lib/include/SDL3_latex/: TEX_config.h  TEX_error.h  TEX_parser.h
lib/src/: SDL_latex.c  TEX_font.c  TEX_fontManager.c  TEX_hash.c  TEX_list.c  TEX_parser.c
sandbox/: CMakeLists.txt
sandbox/src/: main.c
vendors/: .gitmodules
