cmake_minimum_required(VERSION 3.20)


set(SANDBOX_NAME ${PROJECT_NAME}_sandbox)
set(SANDBOX_VERSION ${PROJECT_VERSION})
set(SANDBOX_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(SANDBOX_VERSION_MINOR ${PROJECT_VERSION_MINOR})
set(SANDBOX_VERSION_PATCH ${PROJECT_VERSION_PATCH})
string(TOUPPER ${SANDBOX_NAME} SANDBOX_NAME_UPPERCASE)

add_compile_definitions(
	${SANDBOX_NAME_UPPERCASE}_NAME=${SANDBOX_NAME}
	${SANDBOX_NAME_UPPERCASE}_VERSION_MAJOR=${SANDBOX_VERSION_MAJOR}
	${SANDBOX_NAME_UPPERCASE}_VERSION_MINOR=${SANDBOX_VERSION_MINOR}
	${SANDBOX_NAME_UPPERCASE}_VERSION_PATCH=${SANDBOX_VERSION_PATCH}
)

include_directories(
	./include,
	../lib/include
)

file(GLOB_RECURSE SANDBOX_HEADER *.h)
file(GLOB_RECURSE SANDBOX_INLINE *.inl)
file(GLOB_RECURSE SANDBOX_SOURCE *.c)

add_executable(${SANDBOX_NAME} ${SANDBOX_HEADER} ${SANDBOX_INLINE} ${SANDBOX_SOURCE})
set_property(TARGET ${SANDBOX_NAME} PROPERTY C_STANDARD ${PROJECT_C_DIALECT})

#target_link_directories(./lib)

target_link_libraries(${SANDBOX_NAME} PRIVATE ${PROJECT_NAME} ${DEPS_LIBRARIES})



if (WIN32)
	add_compile_definitions(${SANDBOX_NAME_UPPERCASE}_WINDOWS)
elseif (UNIX)
	add_compile_definitions(${SANDBOX_NAME_UPPERCASE}_LINUX)
elseif (APPLE)
	add_compile_definitions(${SANDBOX_NAME_UPPERCASE}_APPLE)
else()
	message(FATAL_ERROR "Platforms other than Windows, Linux and MacOS aren't supported for now")
endif()


if (WIN32)
	if (NOT BUILD_STATIC)
		add_custom_command(
			TARGET ${SANDBOX_NAME}
			PRE_BUILD
			COMMAND ${CMAKE_COMMAND} -E copy_if_different
			"${PROJECT_BINARY_DIR}/lib/lib${PROJECT_NAME}.dll"
			"${PROJECT_BINARY_DIR}/sandbox"
		)
	endif()

	CLONE_SDL_DLL(${SANDBOX_NAME})
	CLONE_SDL_IMAGE_DLL(${SANDBOX_NAME})
endif()
